--- a/manb/setup.cfg
+++ b/manb/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = manb
-version = 0.0.2
-author = Example Author
-author_email = sherburne.tim@gmail.com
+version = 0.0.3
+author = Virginia Tech
+author_email = info@mission-aware.net
 description = Mission Aware Notebook
 long_description = file: README.md
 long_description_content_type = text/markdown
