risk assesment module

--- a/manb/setup.cfg
+++ b/manb/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = manb
-version = 0.0.3
+version = 0.0.15
 author = Virginia Tech
 author_email = info@mission-aware.net
 description = Mission Aware Notebook
@@ -19,6 +19,9 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+install_requires =
+    plantuml
+    requests
 
 [options.packages.find]
 where = src
