--- a/manb/setup.cfg
+++ b/manb/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = manb
-version = 0.0.31
+version = 0.0.32
 author = Virginia Tech
 author_email = info@mission-aware.net
 description = Mission Aware Notebook
@@ -20,6 +20,7 @@ package_dir =
 packages = find:
 python_requires = >=3.6
 install_requires =
+    itables
     plantuml
     requests
     ipywidgets
