html escape req descriptions

--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,12 +1,12 @@
 [
   {
-    "name": "Silverfish",
+    "name": "1 - Silverfish",
     "path": "sf",
     "id": "1d551042-0738-4e35-9a64-040103a5c016"
   },
   {
-    "name": "Pipeline",
+    "name": "2 - Pipeline",
     "path": "pl",
-    "id": ""
+    "id": "895dec24-5a15-418c-ab7c-b16f0755f055"
   }
 ]
