--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,16 @@
 manb
+bqplot
+ipycanvas>=0.9.1
+ipyleaflet
+ipympl>=0.8.2
+ipywidgets>=7.7,<8
+jupyterlab~=3.3.0
+jupyterlab-drawio
+jupyterlab-language-pack-fr-FR
+jupyterlab-language-pack-zh-CN
+jupyterlab-fasta>=3,<4
+jupyterlab-geojson>=3,<4
+jupyterlab_miami_nights
+jupyterlite==0.1.0b4
+plotly>=5,<6
+theme-darcula
